force-app/main/default/objects/Travel_Request__c/Travel_Request__c.object-meta.xml
<CustomObject>
    <description>Core object tracking employee travel requests, itineraries, estimated budgets, and approvals.</description>
    <label>Travel Request</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Travel Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>