force-app/main/default/objects/Travel_Request__c/fields/Actual_Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Expense__c</fullName>
    <description>Roll-up summary of all submitted expense reports for this trip.</description>
    <label>Actual Total Expense</label>
    <summarizedField>Expense_Report__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Report__c.Travel_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>