force-app/main/default/objects/Travel_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Designated manager / approver.</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Travel_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>