force-app/main/default/objects/Travel_Request__c/fields/Budget_Utilization_Percent__c.field-meta.xml
<CustomField>
    <fullName>Budget_Utilization_Percent__c</fullName>
    <description>Percentage of approved budget consumed by actual expenses.</description>
    <formula>IF(Estimated_Cost__c &gt; 0, BLANKVALUE(Actual_Total_Expense__c, 0) / Estimated_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Utilization %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>