force-app/main/default/objects/Travel_Request__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Employee department initiating the travel.</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Engineering</fullName><default>false</default><label>Engineering</label></value>
            <value><fullName>Sales</fullName><default>false</default><label>Sales</label></value>
            <value><fullName>Marketing</fullName><default>false</default><label>Marketing</label></value>
            <value><fullName>Human Resources</fullName><default>false</default><label>Human Resources</label></value>
            <value><fullName>Finance</fullName><default>false</default><label>Finance</label></value>
            <value><fullName>Operations</fullName><default>false</default><label>Operations</label></value>
            <value><fullName>Customer Success</fullName><default>false</default><label>Customer Success</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>