force-app/main/default/objects/Travel_Request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee requesting the travel.</description>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Travel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>