force-app/main/default/objects/Travel_Request__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <description>Estimated total trip budget requested.</description>
    <label>Estimated Cost</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>