force-app/main/default/objects/Travel_Request__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Business purpose of the travel.</description>
    <label>Purpose</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>