force-app/main/default/objects/Travel_Request__c/fields/Remaining_Budget__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Budget__c</fullName>
    <description>Remaining trip budget (Estimated Cost minus Actual Expenses).</description>
    <formula>Estimated_Cost__c - BLANKVALUE(Actual_Total_Expense__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>