force-app/main/default/objects/Travel_Request__c/fields/Travel_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Type__c</fullName>
    <description>Category of travel.</description>
    <label>Travel Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Domestic</fullName><default>true</default><label>Domestic</label></value>
            <value><fullName>International</fullName><default>false</default><label>International</label></value>
            <value><fullName>Client Visit</fullName><default>false</default><label>Client Visit</label></value>
            <value><fullName>Conference</fullName><default>false</default><label>Conference</label></value>
            <value><fullName>Internal Training</fullName><default>false</default><label>Internal Training</label></value>
            <value><fullName>Field Audit</fullName><default>false</default><label>Field Audit</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>