force-app/main/default/objects/Travel_Request__c/fields/Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Variance_Amount__c</fullName>
    <description>Budget variance: Actual Total Expense minus Estimated Cost.</description>
    <formula>BLANKVALUE(Actual_Total_Expense__c, 0) - Estimated_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>