force-app/main/default/objects/Travel_Request__c/fields/Variance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Variance_Percentage__c</fullName>
    <description>Budget variance percentage over or under estimated cost.</description>
    <formula>IF(Estimated_Cost__c &gt; 0, (BLANKVALUE(Actual_Total_Expense__c, 0) - Estimated_Cost__c) / Estimated_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>