force-app/main/default/objects/Travel_Request__c/validationRules/End_Date_Cannot_Be_Before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Cannot_Be_Before_Start_Date</fullName>
    <active>true</active>
    <description>End Date cannot be earlier than Start Date.</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be on or after Start Date.</errorMessage>
</ValidationRule>